// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tableFormatter formats data as ASCII table 1`] = `
"[37m┌───┬───┬───┐[39m
[37m│[39m[31m a [39m[37m│[39m[31m b [39m[37m│[39m[31m c [39m[37m│[39m
[37m├───┼───┼───┤[39m
[37m│[39m 1 [37m│[39m 2 [37m│[39m 3 [37m│[39m
[37m├───┼───┼───┤[39m
[37m│[39m 4 [37m│[39m 5 [37m│[39m 6 [37m│[39m
[37m└───┴───┴───┘[39m"
`;

exports[`tableFormatter formats data as ASCII table 2`] = `
"[37m┌───┬───┬───┐[39m
[37m│[39m[31m a [39m[37m│[39m[31m b [39m[37m│[39m[31m c [39m[37m│[39m
[37m├───┼───┼───┤[39m
[37m│[39m 1 [37m│[39m 2 [37m│[39m 3 [37m│[39m
[37m└───┴───┴───┘[39m"
`;

exports[`tableFormatter omits data fields if not presented in \`fields\` argument 1`] = `
"[37m┌─────┬─────┐[39m
[37m│[39m[31m foo [39m[37m│[39m[31m bar [39m[37m│[39m
[37m├─────┼─────┤[39m
[37m│[39m foo [37m│[39m bar [37m│[39m
[37m└─────┴─────┘[39m"
`;
